# haex-vault

./: .dockerignore  .gitignore  .npmrc  .release-please-config.json  CHANGELOG.md  CONTRIBUTING.md  README.md  SYNC_ARCHITECTURE.md  SYNC_REFACTORING_STATUS.md  app-icon.json  drizzle.config.ts  eslint.config.mjs  nuxt.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
src-tauri/: Cargo.toml  Info.ios.plist  tauri.conf.json
src-tauri/bindings/: Account.ts  Action.ts  AddBackendRequest.ts  AddStorageBackendRequest.ts  AddSyncRuleRequest.ts  AddToQueueRequest.ts  Address.ts  Attachment.ts  AuthorizedClient.ts  BackendConfig.ts  BlockedClient.ts  ClaimInviteResult.ts  CleanupResult.ts  ClientInfo.ts  ColumnInfo.ts  ConflictResolution.ts  ConflictStrategy.ts  ConnectedPeer.ts  ConnectionSecurity.ts  CrdtStats.ts  CreateSpaceRequest.ts  CriticalFailureCode.ts  CriticalNotification.ts  DatabaseError.ts  DatabaseInfo.ts  DeleteMode.ts  DeliveryStatus.ts  Device.ts  DeviceCreated.ts  DeviceInfo.ts  DeviceResolution.ts  DeviceType.ts  DirEntry.ts  DirListing.ts  DirtyTable.ts  DownloadFileRequest.ts  DownloadToPathRequest.ts  ElectionResultInfo.ts  ExtensionErrorCode.ts  ExtensionInfoResponse.ts  (+118 more)
src-tauri/capabilities/: default.json  extensions.json  mobile.json
src-tauri/database/: generate-rust-types.ts  vault.db
src-tauri/database/migrations/: 0000_bored_runaways.sql  0000_clean_logan.sql  0000_colossal_shockwave.sql  0000_condemned_slayback.sql  0000_deep_wild_pack.sql  0000_delete_log_refactor.sql  0000_flimsy_jackal.sql  0000_flimsy_namorita.sql  0000_free_sersi.sql  0000_harsh_madripoor.sql  0000_init.sql  0000_legal_namora.sql  0000_loose_hydra.sql  0000_low_night_nurse.sql  0000_messy_kylun.sql  0000_moaning_trauma.sql  0000_modern_pride.sql  0000_nasty_vindicator.sql  0000_natural_madame_masque.sql  0000_open_marvel_boy.sql  0000_panoramic_scorpion.sql  0000_romantic_forgotten_one.sql  0000_secret_mauler.sql  0000_shiny_barracuda.sql  0000_slippery_black_tom.sql  0000_smart_miss_america.sql  0000_sparkling_robbie_robertson.sql  0000_true_blue_shield.sql  0000_wooden_masque.sql  0001_add_dev_path.sql  0001_add_type_to_crdt_configs.sql  0001_ambiguous_alice.sql  0001_cuddly_kronos.sql  0001_cynical_dragon_lord.sql  0001_dashing_shinko_yamashiro.sql  0001_hard_turbo.sql  0001_late_spyke.sql  0001_mute_galactus.sql  0001_narrow_wallop.sql  0001_short_firestar.sql  (+57 more)
src-tauri/database/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  0009_snapshot.json  0010_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  0016_snapshot.json  0017_snapshot.json  _journal.json
src-tauri/generator/: event_names.rs
src-tauri/icons/: icon.icns
src-tauri/packaging/linux/: main.desktop  space.haex.vault.metainfo.xml
src-tauri/permissions/: extension-commands.toml
src-tauri/src/: crypto.rs  lib.rs  main.rs  media_server.rs  shortcuts.rs  window.rs
src-tauri/src/browser_bridge/: authorization.rs  crypto.rs  error.rs  mod.rs  protocol.rs  server.rs  tests.rs
src-tauri/src/crdt/: cleanup.rs  commands.rs  hlc.rs  hlc_node_tests.rs  insert_transformer.rs  mod.rs  scanner.rs  scanner_origin_tests.rs  transformer.rs  trigger.rs
src-tauri/src/crdt/transformer/: mod.rs  tests.rs
src-tauri/src/critical/: codes.rs  commands.rs  error.rs  mod.rs  sink.rs  tests.rs
src-tauri/src/crypto/: mod.rs  tests.rs
src-tauri/src/database/: connection_context.rs  constants.rs  core.rs  error.rs  generated.rs  init.rs  migrations.rs  mod.rs  row.rs  stats.rs  vault_lock.rs
src-tauri/src/device/: error.rs  key.rs  mod.rs
src-tauri/src/extension/: crypto.rs  error.rs  mod.rs  utils.rs
src-tauri/src/extension/core/: context.rs  installer.rs  loader.rs  manager.rs  manifest.rs  migrations.rs  mod.rs  path_utils.rs  protocol.rs  queries.rs  removal.rs  types.rs
src-tauri/src/extension/database/: commands.rs  executor.rs  helpers.rs  mod.rs  planner.rs  queries.rs  types.rs
src-tauri/src/extension/filesync/: commands.rs  encryption.rs  error.rs  file_io.rs  helpers.rs  mod.rs  queries.rs  scanner.rs  tests.rs  types.rs  webview_commands.rs
src-tauri/src/extension/filesystem/: commands.rs  encryption.rs  error.rs  file_io.rs  mod.rs  tests.rs  types.rs  watcher.rs
src-tauri/src/extension/limits/: commands.rs  mod.rs  service.rs  shared.rs  types.rs
src-tauri/src/extension/logging/: commands.rs
src-tauri/src/extension/mail/: commands.rs  mod.rs
src-tauri/src/extension/permissions/: TESTING.md  checker.rs  commands.rs  manager.rs  mod.rs  session.rs  types.rs  (+1 more)
src-tauri/src/external_bridge/: authorization.rs  crypto.rs  mod.rs  protocol.rs  server.rs  tests.rs
src-tauri/src/file_sync/: cloud_provider.rs  commands.rs  diff.rs  engine.rs  hashing.rs  local_provider.rs  mod.rs  peer_provider.rs  provider.rs  types.rs
src-tauri/src/filesystem/: commands.rs  mod.rs  path_validation.rs
src-tauri/src/localsend/: client.rs  crypto.rs  discovery.rs  error.rs  mod.rs  protocol.rs  server.rs  types.rs
src-tauri/src/logging/: commands.rs  mod.rs  queries.rs
src-tauri/src/mail/: error.rs  imap.rs  mod.rs  parsing.rs  smtp.rs  types.rs
src-tauri/src/media_server/: mod.rs  tests.rs
src-tauri/src/mls/: blocking.rs  commands.rs  manager.rs  mod.rs  provider.rs  queries.rs  storage.rs  types.rs
src-tauri/src/passwords/: commands.rs  mod.rs  types.rs
src-tauri/src/peer_storage/: android.rs  client.rs  commands.rs  endpoint.rs  error.rs  handlers.rs  helpers.rs  mod.rs  protocol.rs  streaming.rs  tests.rs
src-tauri/src/quic_did_auth/: client.rs  mod.rs  server.rs  wire.rs
src-tauri/src/remote_storage/: backend.rs  commands.rs  error.rs  mod.rs  progress.rs  queries.rs  types.rs
src-tauri/src/ucan/: create.rs  mod.rs  verify.rs
src-tauri/tests/: Dockerfile.test  docker-compose.test.yml  mls_lifecycle.rs  peer_storage_e2e.rs  peer_storage_fullstack.rs
(+535 files in other folders)
