[package]
name = "haex-space"
version = "1.4.66"
description = "Secure and privacy friendly data storage"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "haex_space_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde_json = "1.0"
tauri-build = { version = "2.5", features = [] }
serde = { version = "1.0", features = ["derive"] }

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
ed25519-dalek = "2.2"
fs_extra = "1.3"
hex = "0.4"
lazy_static = "1.5"
mime = "0.3"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlparser = { version = "0.59", features = ["visitor"] }
tauri = { version = "2.9", features = ["protocol-asset", "devtools", "test"] }
tauri-plugin-dialog = "2.4"
tauri-plugin-fs = "2.4"
tauri-plugin-http = "2.5"
tauri-plugin-notification = "2.3"
tauri-plugin-opener = "2.5"
tauri-plugin-os = "2.3"
tauri-plugin-persisted-scope = "2.3"
tauri-plugin-store = "2.4"
tauri-plugin-deep-link = "2.4"
tauri-plugin-single-instance = "2.3"
thiserror = "2.0"
ts-rs = { version = "11.1", features = ["serde-compat"] }
uhlc = "0.8"
url = "2.5"
uuid = { version = "1.19", features = ["v4"] }
zip = "6.0"
rusqlite = { version = "0.37", features = [
  "load_extension",
  "bundled-sqlcipher-vendored-openssl",
  "functions",
] }
regex = "1.12"
tokio-tungstenite = "0.28.0"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
p256 = { version = "0.13", features = ["ecdh", "pkcs8"] }
aes-gcm = "0.10"
rand = "0.8"
# FileSync dependencies
chacha20poly1305 = "0.10"
async-trait = "0.1"
# S3 backend - using native-tls (works on Android without cmake/aws-lc-rs issues)
rust-s3 = { version = "0.37", default-features = false, features = ["tokio-native-tls", "fail-on-err", "tags"] }
# Supabase Storage backend (HTTP client)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# LocalSend dependencies (all platforms)
get_if_addrs = "0.5"
whoami = "2.0"
time = "0.3"
# LocalSend server (all platforms - mobile only active when app in foreground)
axum = "0.7"
axum-server = { version = "0.7", features = ["tls-rustls-no-provider"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "5.2"
notify = "8.2"
notify-debouncer-mini = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometry = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "23"

[dev-dependencies]
futures = "0.3"
tempfile = "3.19"
