[package]
name = "haex-vault"
version = "1.6.43"
description = "Build once. Run everywhere. Sync automatically"
authors = ["Haex"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "haex_vault_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
serde_json = "1.0"
tauri-build = { version = "2.5.5", features = [] }
serde = { version = "1.0", features = ["derive"] }

[dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
base64 = "0.22"
ed25519-dalek = "2.2"
fs_extra = "1.3"
hex = "0.4"
lazy_static = "1.5"
mime = "0.3"
mime_guess = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
sqlparser = { version = "0.61", features = ["visitor"] }
tauri = { version = "2.10", features = ["protocol-asset", "devtools", "test"] }
tauri-plugin-dialog = "2.6"
tauri-plugin-fs = "2.4.5"
tauri-plugin-http = "2.5.7"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2.5.3"
tauri-plugin-os = "2.3"
tauri-plugin-persisted-scope = "2.3.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-deep-link = "2.4.7"
tauri-plugin-single-instance = "2.4"
thiserror = "2.0"
ts-rs = { version = "12.0", features = ["serde-compat"] }
uhlc = "0.9"
url = "2.5"
uuid = { version = "1.22", features = ["v4"] }
zip = "7.4"
rusqlite = { version = "0.38", features = [
  "load_extension",
  "bundled-sqlcipher-vendored-openssl",
  "functions",
] }
regex = "1.12"
tokio-tungstenite = "0.28.0"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }
p256 = { version = "0.13", features = ["ecdh", "pkcs8"] }
aes-gcm = "0.10"
hkdf = "0.12"
rand = "0.8"
# FileSync dependencies
chacha20poly1305 = "0.10"
async-trait = "0.1"
# S3 backend - using native-tls (works on Android without cmake/aws-lc-rs issues)
rust-s3 = { version = "0.37", default-features = false, features = [
  "tokio-native-tls",
  "fail-on-err",
  "tags",
] }
# Supabase Storage backend (HTTP client)
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "native-tls",
] }

# Peer Storage (P2P file sharing via iroh/QUIC)
iroh = { version = "0.96", default-features = false, features = ["address-lookup-mdns"] }

# Time utilities
time = "0.3"

# PTY support for shell/terminal (desktop + android via cfg)
portable-pty = "0.9"



[target.'cfg(not(target_os = "android"))'.dependencies]
trash = "5.2"
notify = "8.2"
notify-debouncer-mini = "0.7"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18"
webkit2gtk = "2.0"

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-biometry = "0.2"

[target.'cfg(target_os = "android")'.dependencies]
tauri-plugin-android-fs = "25"

[dev-dependencies]
futures = "0.3"
tempfile = "3.19"
